@@ -127,14 +127,16 @@ $_lang['goodnews.newsletter_draft']                                 = '(Draft)';
 $_lang['goodnews.newsletter_cat_not_defined']                       = '(none selected)';
 $_lang['goodnews.newsletter_cat_assign']                            = 'Assign mailing categories';
 $_lang['goodnews.newsletter_cat_assign_desc']                       = 'Accordingly to this assignment the recipients are assorted.';
-$_lang['goodnews.newsletter_send_process']                          = 'Send-Process: ';
+$_lang['goodnews.newsletter_send_process_stop']                     = 'Send-STOP';
 $_lang['goodnews.newsletter_send_process_started']                  = 'Processes Started';
 $_lang['goodnews.newsletter_send_process_started_msg_success']      = 'The send processes have been enabled!';
 $_lang['goodnews.newsletter_send_process_started_msg_failed']       = 'The send processes could not be enabled!';
 $_lang['goodnews.newsletter_send_process_stopped']                  = 'Processes Stopped';
 $_lang['goodnews.newsletter_send_process_stopped_msg_success']      = 'All send processes have been disabled!';
 $_lang['goodnews.newsletter_send_process_stopped_msg_failed']       = 'The send processes could not be disabled!';
-$_lang['goodnews.newsletter_grid_autorefresh_on']                   = 'Auto-Refresh ON';
+$_lang['goodnews.newsletter_send_process_toggle_tooltip']           = 'Deactivate/activate all send processes (emergency stop switch)';
+$_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh';
+$_lang['goodnews.newsletter_grid_autorefresh_tooltip']              = 'Refresh newsletter grid automatically';
 $_lang['goodnews.newsletter_sendlog_view']                          = 'View Send-Log';
 $_lang['goodnews.newsletter_sendlog_window_title']                  = 'Send-Log for Mailing: ';
 $_lang['goodnews.newsletter_sendlog_export_button']                 = 'Export';
